--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -26,21 +26,73 @@
                     android:id="@+id/tab1Ranking"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_marginLeft="10dp">
 
-                    <TextView
+                    <!--<TextView-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:text="Durchgang 1"/>-->
+
+
+                    <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Durchgang 1"/>
-
-
-                    <GridView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:numColumns="5"
+                        android:id="@+id/ranking_table_lap1"
                         >
+                        <TableRow>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                style="@style/RankTableHeader"
+                                android:height="25sp"
+                                android:width="20sp"
+                                android:layout_marginTop="10sp"
+                                android:text="#">
+                            </TextView>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="Name"
+                                android:textSize="12sp"
+                                android:minWidth="180sp"
+                                android:layout_marginTop="10sp"
+                                android:textColor="#8a000000"
+                                >
 
-                    </GridView>
+                            </TextView>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:textSize="12sp"
+                                android:textColor="#8a000000"
+                                android:minWidth="50sp"
+                                android:layout_marginTop="10sp"
+                                android:text="Time">
+                            </TextView>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="best"
+                                android:textSize="12sp"
+                                android:layout_gravity="end|bottom"
+                                android:layout_marginTop="10sp"
+                                android:textColor="#8a000000">
+                            </TextView>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="me"
+                                android:textSize="12sp"
+                                android:minWidth="50sp"
+                                android:textAlignment="textEnd"
+                                android:layout_gravity="end|bottom"
+                                android:layout_marginTop="10sp"
+                                android:textColor="#8a000000">
+                            </TextView>
+                        </TableRow>
+                    </TableLayout>
+
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/tab2Ranking"
@@ -48,10 +100,66 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
+
+
+                    <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Durchgang 2"/>
+                        android:id="@+id/ranking_table_lap2"
+                        android:layout_marginLeft="10sp"
+                        >
+                    <TableRow>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            style="@style/RankTableHeader"
+                            android:height="25sp"
+                            android:width="20sp"
+                            android:layout_marginTop="10sp"
+                            android:text="#">
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Name"
+                            android:textSize="12sp"
+                            android:minWidth="180sp"
+                            android:layout_marginTop="10sp"
+                            android:textColor="#8a000000"
+                            >
+
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textSize="12sp"
+                            android:textColor="#8a000000"
+                            android:minWidth="50sp"
+                            android:layout_marginTop="10sp"
+                            android:text="Time">
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="best"
+                            android:textSize="12sp"
+                            android:layout_gravity="end|bottom"
+                            android:layout_marginTop="10sp"
+                            android:textColor="#8a000000">
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="me"
+                            android:textSize="12sp"
+                            android:minWidth="50sp"
+                            android:textAlignment="textEnd"
+                            android:layout_gravity="end|bottom"
+                            android:layout_marginTop="10sp"
+                            android:textColor="#8a000000">
+                        </TextView>
+                    </TableRow>
+                    </TableLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/tab3Ranking"
@@ -59,10 +167,66 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
+
+
+                    <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Gesamt"/>
+                        android:id="@+id/ranking_table_result"
+                        android:layout_marginLeft="10sp"
+                        >
+                    <TableRow>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            style="@style/RankTableHeader"
+                            android:height="25sp"
+                            android:width="20sp"
+                            android:layout_marginTop="10sp"
+                            android:text="#">
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Name"
+                            android:textSize="12sp"
+                            android:minWidth="180sp"
+                            android:layout_marginTop="10sp"
+                            android:textColor="#8a000000"
+                            >
+
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textSize="12sp"
+                            android:textColor="#8a000000"
+                            android:minWidth="50sp"
+                            android:layout_marginTop="10sp"
+                            android:text="Time">
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="best"
+                            android:textSize="12sp"
+                            android:layout_gravity="end|bottom"
+                            android:layout_marginTop="10sp"
+                            android:textColor="#8a000000">
+                        </TextView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="me"
+                            android:textSize="12sp"
+                            android:minWidth="50sp"
+                            android:textAlignment="textEnd"
+                            android:layout_gravity="end|bottom"
+                            android:layout_marginTop="10sp"
+                            android:textColor="#8a000000">
+                        </TextView>
+                    </TableRow>
+                    </TableLayout>
                 </LinearLayout>
             </FrameLayout>
 
