--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="RankTableField" parent="@android:style/TextAppearance.Medium">
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:textColor">#de000000</item>
+    <item name="android:textSize">13sp</item>
+  </style>
+    <style name="RankTableHeader" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#8a000000</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
