--- a/app/src/main/res/layout/social_image_card.xml
+++ b/app/src/main/res/layout/social_image_card.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    android:layout_margin="10dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_margin="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
