--- a/app/src/main/res/layout/fragment_social_feedback.xml
+++ b/app/src/main/res/layout/fragment_social_feedback.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="layout.fragment_social_feedback">
+    android:layout_height="match_parent">
 
 
     <ScrollView
