--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -17,4 +17,9 @@
         android:id="@+id/menu_social"
         android:title="@string/menu_social"
         android:icon="@drawable/ic_social" />
+
+    <item
+        android:id="@+id/menu_feedback"
+        android:title="Feedback"
+        android:icon="@drawable/ic_feedback"/>
 </menu>
