--- a/app/src/main/res/layout/fragment_social.xml
+++ b/app/src/main/res/layout/fragment_social.xml
@@ -17,14 +17,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <ImageButton
+        android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        android:background="#00FFFFFF"
+        app:srcCompat="@null" />
 
     <GridLayout
         android:id="@+id/button_bar"
@@ -35,7 +36,7 @@
         android:layout_alignParentStart="true">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/camera_button"
             android:layout_width="50dp"
 
             android:alpha="1"
@@ -46,7 +47,7 @@
             android:src="@drawable/camera_icon" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/attach_button"
             android:layout_width="50dp"
 
             android:alpha="1"
@@ -72,7 +73,7 @@
         android:inputType="textMultiLine" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/post_button"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
