--- a/app/src/main/res/layout/social_image_card.xml
+++ b/app/src/main/res/layout/social_image_card.xml
@@ -56,6 +56,7 @@
 
                     android:drawableLeft="@drawable/facebook_icon"
 
+                    android:onClick="feedbackButtonOnClick"
                     android:text="420 Likes" />
 
                 <Button
@@ -67,6 +68,7 @@
                     android:background="#00FFFFFF"
                     android:drawableLeft="@drawable/instagram_icon"
 
+                    android:onClick="feedbackButtonOnClick"
                     android:text="69 Likes" />
             </TableRow>
 
@@ -86,6 +88,7 @@
 
                     android:drawableLeft="@drawable/twitter_icon"
 
+                    android:onClick="feedbackButtonOnClick"
                     android:text="100 Retweets" />
 
                 <Button
@@ -96,6 +99,8 @@
 
                     android:background="#00FFFFFF"
                     android:drawableLeft="@drawable/comments_icon"
+
+                    android:onClick="feedbackButtonOnClick"
 
                     android:text="300 Comments" />
             </TableRow>
