--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -48,14 +49,16 @@
                                 android:height="25sp"
                                 android:width="20sp"
                                 android:layout_marginTop="10sp"
+                                android:layout_marginBottom="20sp"
                                 android:text="#">
                             </TextView>
+                            <TextView />
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:text="Name"
                                 android:textSize="12sp"
-                                android:minWidth="180sp"
+                                android:minWidth="130sp"
                                 android:layout_marginTop="10sp"
                                 android:textColor="#8a000000"
                                 >
@@ -84,7 +87,7 @@
                                 android:layout_height="match_parent"
                                 android:text="me"
                                 android:textSize="12sp"
-                                android:minWidth="50sp"
+                                android:minWidth="40sp"
                                 android:textAlignment="textEnd"
                                 android:layout_gravity="end|bottom"
                                 android:layout_marginTop="10sp"
@@ -116,14 +119,16 @@
                             android:height="25sp"
                             android:width="20sp"
                             android:layout_marginTop="10sp"
+                            android:layout_marginBottom="20sp"
                             android:text="#">
                         </TextView>
+                        <TextView />
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="Name"
                             android:textSize="12sp"
-                            android:minWidth="180sp"
+                            android:minWidth="130sp"
                             android:layout_marginTop="10sp"
                             android:textColor="#8a000000"
                             >
@@ -152,7 +157,7 @@
                             android:layout_height="match_parent"
                             android:text="me"
                             android:textSize="12sp"
-                            android:minWidth="50sp"
+                            android:minWidth="40sp"
                             android:textAlignment="textEnd"
                             android:layout_gravity="end|bottom"
                             android:layout_marginTop="10sp"
@@ -183,14 +188,16 @@
                             android:height="25sp"
                             android:width="20sp"
                             android:layout_marginTop="10sp"
+                            android:layout_marginBottom="20sp"
                             android:text="#">
                         </TextView>
+                        <TextView />
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="Name"
                             android:textSize="12sp"
-                            android:minWidth="180sp"
+                            android:minWidth="130sp"
                             android:layout_marginTop="10sp"
                             android:textColor="#8a000000"
                             >
@@ -219,7 +226,7 @@
                             android:layout_height="match_parent"
                             android:text="me"
                             android:textSize="12sp"
-                            android:minWidth="50sp"
+                            android:minWidth="40sp"
                             android:textAlignment="textEnd"
                             android:layout_gravity="end|bottom"
                             android:layout_marginTop="10sp"
