Add StatusMenu, Add Settings-Screen and Functionality to Settings-Screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     tools:context="com.skiday.app.skiday.MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp" />
+
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
