last cosmetic fixes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#C23C87</color>
     <color name="colorDetailsValue">#000000</color>
     <color name="colorDetailsLabel">#80000000</color>
+    <color name="colorDarkGrey">#8a000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorRankTableFieldText">#de000000</color>
     <color name="colorRankTableHeader">#8a000000</color>
