--- a/app/src/main/res/layout/timeline_list.xml
+++ b/app/src/main/res/layout/timeline_list.xml
@@ -27,14 +27,14 @@
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
