--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -29,211 +29,50 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_marginLeft="10dp">
-
-                    <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="match_parent"-->
-                        <!--android:text="Durchgang 1"/>-->
-
-
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                     <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/ranking_table_lap1"
-                        >
-                        <TableRow>
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                style="@style/RankTableHeader"
-                                android:height="25sp"
-                                android:width="20sp"
-                                android:layout_marginTop="10sp"
-                                android:layout_marginBottom="20sp"
-                                android:text="#">
-                            </TextView>
-                            <TextView />
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="Name"
-                                android:textSize="12sp"
-                                android:minWidth="130sp"
-                                android:layout_marginTop="10sp"
-                                android:textColor="#8a000000"
-                                >
-
-                            </TextView>
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:textSize="12sp"
-                                android:textColor="#8a000000"
-                                android:minWidth="50sp"
-                                android:layout_marginTop="10sp"
-                                android:text="Time">
-                            </TextView>
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="best"
-                                android:textSize="12sp"
-                                android:layout_gravity="end|bottom"
-                                android:layout_marginTop="10sp"
-                                android:textColor="#8a000000">
-                            </TextView>
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="me"
-                                android:textSize="12sp"
-                                android:minWidth="40sp"
-                                android:textAlignment="textEnd"
-                                android:layout_gravity="end|bottom"
-                                android:layout_marginTop="10sp"
-                                android:textColor="#8a000000">
-                            </TextView>
-                        </TableRow>
+                        android:paddingTop="20dp">
                     </TableLayout>
-
+                    </ScrollView>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/tab2Ranking"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
-
-
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                     <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/ranking_table_lap2"
                         android:layout_marginLeft="10sp"
-                        >
-                    <TableRow>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            style="@style/RankTableHeader"
-                            android:height="25sp"
-                            android:width="20sp"
-                            android:layout_marginTop="10sp"
-                            android:layout_marginBottom="20sp"
-                            android:text="#">
-                        </TextView>
-                        <TextView />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Name"
-                            android:textSize="12sp"
-                            android:minWidth="130sp"
-                            android:layout_marginTop="10sp"
-                            android:textColor="#8a000000"
-                            >
-
-                        </TextView>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:textSize="12sp"
-                            android:textColor="#8a000000"
-                            android:minWidth="50sp"
-                            android:layout_marginTop="10sp"
-                            android:text="Time">
-                        </TextView>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="best"
-                            android:textSize="12sp"
-                            android:layout_gravity="end|bottom"
-                            android:layout_marginTop="10sp"
-                            android:textColor="#8a000000">
-                        </TextView>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="me"
-                            android:textSize="12sp"
-                            android:minWidth="40sp"
-                            android:textAlignment="textEnd"
-                            android:layout_gravity="end|bottom"
-                            android:layout_marginTop="10sp"
-                            android:textColor="#8a000000">
-                        </TextView>
-                    </TableRow>
+                        android:paddingTop="20dp">
                     </TableLayout>
+                    </ScrollView>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/tab3Ranking"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
-
-
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                     <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/ranking_table_result"
                         android:layout_marginLeft="10sp"
-                        >
-                    <TableRow>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            style="@style/RankTableHeader"
-                            android:height="25sp"
-                            android:width="20sp"
-                            android:layout_marginTop="10sp"
-                            android:layout_marginBottom="20sp"
-                            android:text="#">
-                        </TextView>
-                        <TextView />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Name"
-                            android:textSize="12sp"
-                            android:minWidth="130sp"
-                            android:layout_marginTop="10sp"
-                            android:textColor="#8a000000"
-                            >
-
-                        </TextView>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:textSize="12sp"
-                            android:textColor="#8a000000"
-                            android:minWidth="50sp"
-                            android:layout_marginTop="10sp"
-                            android:text="Time">
-                        </TextView>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="best"
-                            android:textSize="12sp"
-                            android:layout_gravity="end|bottom"
-                            android:layout_marginTop="10sp"
-                            android:textColor="#8a000000">
-                        </TextView>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="me"
-                            android:textSize="12sp"
-                            android:minWidth="40sp"
-                            android:textAlignment="textEnd"
-                            android:layout_gravity="end|bottom"
-                            android:layout_marginTop="10sp"
-                            android:textColor="#8a000000">
-                        </TextView>
-                    </TableRow>
+                        android:paddingTop="20dp">
                     </TableLayout>
+                    </ScrollView>
                 </LinearLayout>
             </FrameLayout>
 
