--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -32,10 +32,13 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:id="@+id/timeline_myEvents"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                    <ExpandableListView
+                        android:id="@+id/timeline_expandableListView"
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:groupIndicator="@null"
+                        />
+
 
                 </LinearLayout>
 
