--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,10 @@
         android:id="@+id/logout_button"
         android:title="LogOut"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/filter_button"
+        android:title="Filter"
+        android:visible="false"
+        app:showAsAction="always" />
 </menu>
