--- a/app/src/main/res/layout/rank_detail.xml
+++ b/app/src/main/res/layout/rank_detail.xml
@@ -82,7 +82,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Best"
+                android:text="Δ Best"
                 android:textSize="12sp"
                 android:layout_gravity="end|bottom"
                 android:layout_marginTop="10sp"
@@ -91,7 +91,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Me"
+                android:text="Δ Me"
                 android:textSize="12sp"
                 android:minWidth="50sp"
                 android:textAlignment="textEnd"
@@ -106,6 +106,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:layout_gravity="bottom"
                 android:text="1. Meantime"
                 android:textSize="13sp"
                 android:textColor="#8a000000"
@@ -116,8 +117,9 @@
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m1_time"
-                android:layout_gravity="right"
-                android:textSize="13sp"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
                 android:textColor="@color/colorRankTableFieldText"
                 android:minWidth="50sp"
                 android:text="">
@@ -126,7 +128,8 @@
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m1_best"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:textSize="13sp"
                 android:textColor="@color/colorRankTableFieldText"
                 android:minWidth="50sp"
@@ -135,7 +138,8 @@
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:id="@+id/rank_detail_m1_me"
                 android:textSize="13sp"
                 android:textColor="@color/colorRankTableFieldText"
@@ -159,15 +163,17 @@
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m2_time"
                 android:layout_width="70dp"
-                android:layout_gravity="right"
-                android:textSize="13sp"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
                 android:textColor="@color/colorRankTableFieldText"
                 android:minWidth="50sp"
                 android:text="">
             </TextView>
             <TextView
                 android:layout_width="70dp"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m2_best"
                 android:textSize="13sp"
@@ -177,7 +183,8 @@
             </TextView>
             <TextView
                 android:layout_width="70dp"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m2_me"
                 android:textSize="13sp"
@@ -202,15 +209,17 @@
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m3_time"
                 android:layout_width="70dp"
-                android:layout_gravity="right"
-                android:textSize="13sp"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
                 android:textColor="@color/colorRankTableFieldText"
                 android:minWidth="50sp"
                 android:text="">
             </TextView>
             <TextView
                 android:layout_width="70dp"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m3_best"
                 android:textSize="13sp"
@@ -220,7 +229,8 @@
             </TextView>
             <TextView
                 android:layout_width="70dp"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m3_me"
                 android:textSize="13sp"
@@ -245,15 +255,18 @@
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m4_time"
                 android:layout_width="70dp"
-                android:layout_gravity="right"
-                android:textSize="13sp"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
                 android:minWidth="50sp"
                 android:text="">
             </TextView>
             <TextView
                 android:layout_width="70dp"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m4_best"
                 android:textSize="13sp"
@@ -263,7 +276,8 @@
             </TextView>
             <TextView
                 android:layout_width="70dp"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:textAlignment="textEnd"
                 android:layout_height="match_parent"
                 android:id="@+id/rank_detail_m4_me"
                 android:textSize="13sp"
