--- a/app/src/main/res/layout/social_text_card.xml
+++ b/app/src/main/res/layout/social_text_card.xml
@@ -12,83 +12,95 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/text_post"
+            android:id="@+id/timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="3h ago"
+            android:textSize="10dp" />
+
+        <TextView
+            android:id="@+id/post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:fontFamily="verdana"
-            android:scaleType="centerCrop"
-            android:text="test"
-            android:textSize="18sp"/>
-
+            android:layout_below="@id/timestamp"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore " />
 
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
 
-            android:layout_below="@id/text_post"
+            android:layout_below="@id/post"
             android:layout_marginBottom="1dp"
 
             android:layout_marginTop="1dp"
 
             android:background="#787878" />
 
-        <TableLayout
+        <LinearLayout
+            android:id="@+id/feedback_line"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/divider"
-            android:stretchColumns="0,1,2">
+            android:layout_below="@id/divider">
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
-                android:padding="3dp">
+            <Button
+                android:id="@+id/facebook_button"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
 
-                <Button
-                    android:id="@id/facebook_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
+                android:layout_marginRight="10dp"
 
-                    android:background="#00FFFFFF"
+                android:background="#00FFFFFF"
+                android:drawableLeft="@drawable/facebook_icon"
 
-                    android:drawableLeft="@drawable/facebook_icon"
+                android:onClick="feedbackButtonOnClick"
+                android:text="420"
+                android:textSize="10dp" />
 
-                    android:text="420 Likes" />
+            <Button
+                android:id="@+id/instagram_button"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
 
-            </TableRow>
+                android:layout_marginRight="10dp"
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:background="#00FFFFFF"
+                android:drawableLeft="@drawable/instagram_icon"
 
-                android:padding="3dp">
+                android:onClick="feedbackButtonOnClick"
+                android:text="69"
+                android:textSize="10dp" />
 
-                <Button
-                    android:id="@id/twitter_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
+            <Button
+                android:id="@+id/twitter_button"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
 
-                    android:background="#00FFFFFF"
+                android:layout_marginRight="10dp"
 
-                    android:drawableLeft="@drawable/twitter_icon"
+                android:background="#00FFFFFF"
+                android:drawableLeft="@drawable/twitter_icon"
 
-                    android:text="100 Retweets" />
+                android:onClick="feedbackButtonOnClick"
+                android:text="100"
+                android:textSize="10dp" />
 
-                <Button
-                    android:id="@id/comments_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="2"
+            <Button
+                android:id="@+id/comments_button"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
 
-                    android:background="#00FFFFFF"
-                    android:drawableLeft="@drawable/comments_icon"
+                android:layout_marginRight="10dp"
 
-                    android:text="300 Comments" />
-            </TableRow>
-        </TableLayout>
+                android:background="#00FFFFFF"
+                android:drawableLeft="@drawable/comments_icon"
+
+                android:onClick="feedbackButtonOnClick"
+
+                android:text="300"
+                android:textSize="10dp" />
+        </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
