--- a/app/src/main/res/layout/fragment_rank_detail.xml
+++ b/app/src/main/res/layout/fragment_rank_detail.xml
@@ -49,24 +49,26 @@
         android:id="@+id/current_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1:19:85"
-        android:textSize="36sp"
-        android:textColor="@color/colorPrimary"
-        android:textAlignment="center"
+        android:layout_marginBottom="20sp"
         android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"/>
+        android:text="1:19:85"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="36sp" />
 
     <TableLayout
         android:id="@+id/intermed_results"
         android:layout_width="match_parent"
-        android:layout_height="315dp">
+        android:minHeight="70dp"
+        android:layout_height="match_parent">
         <TableRow
-            android:layout_marginBottom="10sp">
+            android:paddingLeft="10dp"
+            android:layout_marginBottom="5sp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text=""
-                android:textSize="12sp"
+                android:minWidth="60dp"
                 android:layout_marginTop="10sp"
                 >
             </TextView>
@@ -75,31 +77,324 @@
                 android:layout_height="match_parent"
                 android:textSize="12sp"
                 android:textColor="#8a000000"
-                android:minWidth="50sp"
+                android:minWidth="100sp"
                 android:layout_marginTop="10sp"
-                android:text="Time">
+                android:textAlignment="textEnd"
+                android:layout_gravity="end|bottom"
+                android:text="Best of Lap">
             </TextView>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Best"
+                android:text="Time"
                 android:textSize="12sp"
-                android:layout_gravity="end|bottom"
+                android:minWidth="120dp"
+                android:textAlignment="center"
+                android:layout_gravity="center|bottom"
                 android:layout_marginTop="10sp"
                 android:textColor="#8a000000">
             </TextView>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Me"
+                android:text="Hirscher"
                 android:textSize="12sp"
-                android:minWidth="50sp"
-                android:textAlignment="textEnd"
-                android:layout_gravity="end|bottom"
+                android:minWidth="80sp"
+                android:textAlignment="textStart"
+                android:layout_gravity="start|bottom"
                 android:layout_marginTop="10sp"
                 android:textColor="#8a000000">
             </TextView>
         </TableRow>
+
+
+        <TableRow
+            android:layout_marginBottom="10sp"
+            android:minHeight="50dp"
+            android:paddingLeft="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="1. Meantime"
+                android:textSize="12sp"
+                android:layout_marginTop="10sp"
+                >
+            </TextView>
+            <LinearLayout android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="16sp"
+                android:textColor="@color/colorRankTableHeader"
+                android:textAlignment="textEnd"
+                android:layout_gravity="end|bottom"
+                android:layout_marginTop="10sp"
+                android:text="20,00">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="10sp"
+                android:textColor="@color/colorRankTableRed"
+                android:textAlignment="textEnd"
+                android:layout_gravity="end|bottom"
+                android:layout_marginTop="0sp"
+                android:text="+00,74">
+            </TextView>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="20,74"
+                android:textSize="20sp"
+                android:layout_gravity="center|bottom"
+                android:textAlignment="center"
+                android:layout_marginTop="10sp"
+                android:textColor="@color/colorRankTableFieldText">
+            </TextView>
+
+            <LinearLayout android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="23,93"
+                android:textSize="16sp"
+                android:textAlignment="textStart"
+                android:layout_gravity="start|bottom"
+                android:layout_marginTop="10sp"
+                android:textColor="@color/colorRankTableHeader">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="10sp"
+                android:textColor="@color/colorRankTableGreen"
+                android:textAlignment="textStart"
+                android:layout_gravity="start|bottom"
+                android:layout_marginTop="0sp"
+                android:text="+00,74">
+            </TextView>
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginBottom="10sp"
+            android:minHeight="50dp"
+            android:background="@color/colorRankTableBackground"
+            android:paddingLeft="10dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="2. Meantime"
+                android:textSize="12sp"
+                android:layout_marginTop="10sp"
+                >
+            </TextView>
+            <LinearLayout android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorRankTableHeader"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="10sp"
+                    android:text="20,00">
+                </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankTableRed"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="+00,74">
+                </TextView>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="20,74"
+                android:textSize="20sp"
+                android:layout_gravity="center|bottom"
+                android:textAlignment="center"
+                android:layout_marginTop="10sp"
+                android:textColor="@color/colorRankTableFieldText">
+            </TextView>
+
+            <LinearLayout android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="23,93"
+                    android:textSize="16sp"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="10sp"
+                    android:textColor="@color/colorRankTableHeader">
+                </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankTableGreen"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="+00,74">
+                </TextView>
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginBottom="10sp"
+            android:minHeight="50dp"
+            android:paddingLeft="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="3. Meantime"
+                android:textSize="12sp"
+                android:layout_marginTop="10sp"
+                >
+            </TextView>
+            <LinearLayout android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorRankTableHeader"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="10sp"
+                    android:text="20,00">
+                </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankTableRed"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="+00,74">
+                </TextView>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="20,74"
+                android:textSize="20sp"
+                android:layout_gravity="center|bottom"
+                android:textAlignment="center"
+                android:layout_marginTop="10sp"
+                android:textColor="@color/colorRankTableFieldText">
+            </TextView>
+
+            <LinearLayout android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="23,93"
+                    android:textSize="16sp"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="10sp"
+                    android:textColor="@color/colorRankTableHeader">
+                </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankTableGreen"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="+00,74">
+                </TextView>
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginBottom="10sp"
+            android:minHeight="50dp"
+            android:background="@color/colorRankTableBackground"
+            android:paddingLeft="10dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Total"
+                android:textSize="12sp"
+                android:layout_marginTop="10sp"
+                >
+            </TextView>
+            <LinearLayout android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorRankTableHeader"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="10sp"
+                    android:text="20,00">
+                </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankTableRed"
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="+00,74">
+                </TextView>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="20,74"
+                android:textSize="20sp"
+                android:layout_gravity="center|bottom"
+                android:textAlignment="center"
+                android:layout_marginTop="10sp"
+                android:textColor="@color/colorPrimary">
+            </TextView>
+
+            <LinearLayout android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="23,93"
+                    android:textSize="16sp"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="10sp"
+                    android:textColor="@color/colorRankTableHeader">
+                </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="10sp"
+                    android:textColor="@color/colorRankTableGreen"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginTop="0sp"
+                    android:text="+00,74">
+                </TextView>
+            </LinearLayout>
+        </TableRow>
+
+
+
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
