Implement Persistent Social Media Posting

--- a/app/src/main/res/layout/fragment_social_feedback.xml
+++ b/app/src/main/res/layout/fragment_social_feedback.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/feedback_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
