--- a/app/src/main/res/layout/social_image_card.xml
+++ b/app/src/main/res/layout/social_image_card.xml
@@ -124,7 +124,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/feedback_line"
