--- a/app/src/main/res/layout/fragment_social.xml
+++ b/app/src/main/res/layout/fragment_social.xml
@@ -59,7 +59,7 @@
     </GridLayout>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -78,12 +78,12 @@
         android:id="@+id/post_button"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/editText"
         android:background="@drawable/button_border"
         android:text="Post"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:layout_below="@+id/text"
+        android:layout_alignRight="@+id/cancel_button"
+        android:layout_alignEnd="@+id/cancel_button" />
 
 
 
