--- a/app/src/main/res/layout/timeline_list_item.xml
+++ b/app/src/main/res/layout/timeline_list_item.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
