change design of new post - social, add live view to tab

--- a/app/src/main/res/layout/fragment_social_feedback.xml
+++ b/app/src/main/res/layout/fragment_social_feedback.xml
@@ -52,5 +52,5 @@
 
         android:layout_gravity="right|bottom"
         android:clickable="true"
-        android:src="@android:drawable/ic_input_add" />
+        android:src="@drawable/ic_add" />
 </FrameLayout>
