style event details

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/logout_button"
-        android:title="LogOut"
+        android:title="Logout"
         app:showAsAction="never"/>
 
     <item
