--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -4,7 +4,14 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="20dp">
+
+    <ImageView
+        android:id="@+id/event_details_icon"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,35 +42,49 @@
         android:textColor="@color/colorDetailsValue"
         android:textSize="@dimen/details_value_text_size" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/details_margin_top"
-        android:text="Start Time"
-        android:textColor="@color/colorDetailsLabel"
-        android:textSize="@dimen/details_label_text_size" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/startTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorDetailsValue"
-        android:textSize="@dimen/details_value_text_size" />
+        <TextView
+            android:id="@+id/startTimeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="@dimen/details_margin_top"
+            android:text="Start Time"
+            android:textColor="@color/colorDetailsLabel"
+            android:textSize="@dimen/details_label_text_size" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/details_margin_top"
-        android:text="End Time"
-        android:textColor="@color/colorDetailsLabel"
-        android:textSize="@dimen/details_label_text_size" />
+        <TextView
+            android:id="@+id/startTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/startTimeLabel"
+            android:layout_marginRight="44dp"
+            android:textColor="@color/colorDetailsValue"
+            android:textSize="@dimen/details_value_text_size" />
 
-    <TextView
-        android:id="@+id/endTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorDetailsValue"
-        android:textSize="@dimen/details_value_text_size" />
+        <TextView
+            android:id="@+id/endTimeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/details_margin_top"
+            android:layout_toRightOf="@id/startTimeLabel"
+            android:text="End Time"
+            android:textColor="@color/colorDetailsLabel"
+            android:textSize="@dimen/details_label_text_size" />
+
+        <TextView
+            android:id="@+id/endTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/endTimeLabel"
+            android:layout_toRightOf="@id/startTime"
+            android:textColor="@color/colorDetailsValue"
+            android:textSize="@dimen/details_value_text_size" />
+    </RelativeLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
