change color of login button

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorAccent"
             android:text="Login"/>
 
         <TextView android:id="@+id/link_signup"
